# titantron

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  original idea
backend/: alembic.ini  migration_helpers.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2f64eddb7849_add_analysis_results.py  41fd3d6cdfb0_add_wrestler_alter_egos.py  627445f9e6e0_add_wrestler_rating_and_votes.py  7821593ad505_add_image_tag_to_video_items.py  9093cf8dfdbc_add_library_path_mapping.py  a3b7c9d1e2f4_drop_has_trickplay_and_image_tag.py  ac58ab128395_initial_schema.py  b4c8d2e3f5a6_add_audio_skip_reason.py  c5d9e3f6a7b8_add_audio_spectrum.py  d6e0f4a8b9c1_add_bell_samples.py  de34c4501ffc_add_wrestler_profile_columns.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: analysis_result.py  bell_sample.py  chapter.py  event.py  library.py  match.py  promotion.py  scrape_cache.py  video_item.py  wrestler.py
backend/app/routers/: admin_auth.py  admin_settings.py  analysis.py  auth.py  browse.py  libraries.py  matching.py  player.py  search.py  sync.py  wrestlers.py
backend/app/schemas/: cagematch.py  jellyfin.py
backend/app/services/: admin_session.py  analysis_service.py  audio_detector.py  cagematch_scraper.py  jellyfin_client.py  matching_engine.py  ml_client.py  scene_detector.py  sync_service.py
backend/app/utils/: date_parser.py  rate_limiter.py
backend/tests/: conftest.py  test_date_parser.py  test_matching_engine.py  test_rate_limiter.py  test_trickplay.py
(+48 files in other folders)
